<resources>
    <string name="app_name">두의진이앱</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="id_input_hint">아이디를 입력해주세요</string>
    <string name="pw_input_hint">비밀번호를 입력해주세요</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_input_hint">닉네임을 입력해주세요</string>
    <string name="sign_up">회원 가입</string>
    <string name="login_title">Welcome To Sopt</string>

    <string name="do_login">로그인 하기</string>
    <string name="do_sign_up">회원가입 하기</string>

    <string name="login_error">로그인 에러가 발생하였습니다.</string>
    <string name="login_id_error">아이디를 확인해주세요.</string>
    <string name="login_pw_error">비밀번호를 확인해주세요</string>
    <string name="login_empty_error">값을 입력해주세요.</string>
    <string name="login_success">로그인에 성공하였습니다. %s</string>
    <string name="login_failed">로그인에 실패하였습니다.</string>

    <string name="signup_id_error">ID는 6~10 글자여야 합니다.</string>
    <string name="signup_pw_error">비밀번호는 8~12 글자여야 합니다.</string>
    <string name="signup_nickname_error">닉네임은 공백일 수 없습니다.</string>
    <string name="signup_success">회원가입에 성공했습니다.</string>
    <string name="signup_failed">회원가입에 실패했습니다.</string>
    <string name="auto_login">자동 로그인</string>

    <string name="press_back_again_to_exit">뒤로 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="do_android">DO ANDROID</string>
    <string name="home">홈</string>
    <string name="my_page">마이페이지</string>

    <string name="paper_friend_add_dialog_title">유령 친구를 추가하시겠습니까?</string>
    <string name="paper_friend_add_dialog_positive_button">추가하기</string>
    <string name="paper_friend_add_dialog_negative_button">취소</string>

</resources>